2016-11-19  Niels Möller  <nisse@lysator.liu.se>

	* tests/run-tests: Set up LD_LIBRARY_PATH and DYLD_LIBRARY_PATH
	for tests only, based on TEST_LIBRARY_PATH.

	* tests/mini-random.h: Use name "../mini-gmp.h" for include, so we
	don't need any -I options to the compiler.

	* tests/Makefile: Pass CFLAGS to the linker, as
	recommended by the GNU coding standard.
	(CPPFLAGS): New variable, with empty default value.
	(CFLAGS): Remove the -I flag involving MINI_GMP_DIR, to leave free
	for overriding on make command line.
	(EXTRA_CFLAGS): Deleted variable, no longer needed.

2016-11-18  Torbjörn Granlund  <tg@gmplib.org>

	* tests/Makefile: Pass EXTRA_CFLAGS to linker as a intermediate fix.

2016-11-16  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp/mini-gmp.c (mpn_invert_3by2): Fix arithmetic overflow
	bug, and improve documentation of the algorithm.

2016-11-15  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp/tests/t-limbs.c (testmain): Skip tests with zero
	product.

	* mini-gmp/tests/hex-random.c (hex_random_init): Added fflush
	call.

2016-11-15  Torbjörn Granlund  <tg@gmplib.org>

	* mini-gmp/tests/Makefile (TESTS): New variable, allowing separation of
	compilation and running of tests.
	* mini-gmp/tests/run-tests: Allow empty tests list.

2016-11-01  Torbjörn Granlund  <tg@gmplib.org>

	* mini-gmp/tests/hex-random.c: Reinstate gmp.h inclusion.

2016-08-22  Niels Möller  <nisse@lysator.liu.se>

	* mini-gmp/mini-gmp.c (mpn_set_str_other): Always return size >=
	1, with unnormalized result in the case the input digits are all
	zero. Fixes crash on a large number of leading zeros, reported by
	Axel Miller.
	(mpz_set_str): Normalize as needed, after above change. Return
	failure for inputs string with no digits, i.e., empty except for
	optional sign, base prefix and white space.

2016-01-01 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp/mini-gmp.c: Silence warnings due to (un)signed types.
	* mini-gmp/tests/testutils.c: Likewise.